--- a/canvas_modules/common-canvas/src/common-properties/components/editor-form/editor-form.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/editor-form/editor-form.scss
@@ -64,8 +64,7 @@
 
 .properties-category-content {
 	height: 100%;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding: 0 24px;
 	border-bottom: 1px solid $ui-03;
 	display: none;
 	&.show {
