--- a/canvas_modules/common-canvas/src/common-properties/components/virtualized-table/virtualized-table.scss
+++ b/canvas_modules/common-canvas/src/common-properties/components/virtualized-table/virtualized-table.scss
@@ -20,6 +20,7 @@ $properties-vt-checkbox-margin: 5px;
 .properties-vt {
 	width: 100%;
 	height: 100%;
+	background: $ui-02;
 
 	.properties-autosized-vt {
 		// Table rows container
