--- a/canvas_modules/common-canvas/src/common-properties/properties-main/properties-main.scss
+++ b/canvas_modules/common-canvas/src/common-properties/properties-main/properties-main.scss
@@ -48,8 +48,9 @@
 		top: 50%;
 		left: -13px;
 		z-index: 1; // needs to sit on top of common-properties div
-		min-height: 20px;
-		border-radius: 5px;
+		min-height: 24px;
+		min-width: 24px;
+		// border-radius: 5px;
 		background-color: $ui-01;
 		border: 1px $ui-03 solid;
 		padding: 2px;
@@ -57,8 +58,9 @@
 			background-color: $ui-03;
 		}
 		svg {
-			width: 20px;
-			height: 20px;
+			fill: $icon-01;
+			width: 16px;
+			height: 16px;
 		}
 	}
 }
